// test1 proto

package AA;

message FamilyInfo {
	optional string address = 1 [default = "Haimen Street"];
	optional int32 numberdogs = 2 [default=0];
}

enum FriendType{
  Human,
  Animal,
}

package AA.BB;

message DogInfo {
	enum Sex {
		MALE,
		FEMALE,
	}
  optional int32 age =1;
  optional string name= 3;
  repeated string alias = 18;
  repeated double weight = 5;
  optional AA.FamilyInfo family = 13;
  repeated AA.FamilyInfo neighbors = 25;
  optional Sex sex = 4;
  optional AA.FriendType friend_type = 10;
}

